# invenio-records-ui

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  conf.py  configuration.rst  examplesapp.rst  index.rst  make.bat  usage.rst
examples/: app-fixtures.sh  app-recreate.sh  app.py  permsapp-recreate.sh  permsapp.py  requirements.txt
invenio_records_ui/: __init__.py  config.py  ext.py  signals.py  utils.py  version.py  views.py
invenio_records_ui/templates/invenio_records_ui/: _macros.html  base.html  detail.html  export.html  export_well.html  index.html  tombstone.html
invenio_records_ui/templates/semantic-ui/invenio_records_ui/: detail.html  export.html  export_well.html  tombstone.html
invenio_records_ui/translations/: messages.pot
invenio_records_ui/translations/ar/LC_MESSAGES/: messages.po
invenio_records_ui/translations/bg/LC_MESSAGES/: messages.po
invenio_records_ui/translations/ca/LC_MESSAGES/: messages.po
invenio_records_ui/translations/cs/LC_MESSAGES/: messages.po
invenio_records_ui/translations/da/LC_MESSAGES/: messages.po
invenio_records_ui/translations/de/LC_MESSAGES/: messages.po
invenio_records_ui/translations/el/LC_MESSAGES/: messages.po
invenio_records_ui/translations/es/LC_MESSAGES/: messages.po
invenio_records_ui/translations/et/LC_MESSAGES/: messages.po
invenio_records_ui/translations/fa/LC_MESSAGES/: messages.po
invenio_records_ui/translations/fi/LC_MESSAGES/: messages.po
invenio_records_ui/translations/fr/LC_MESSAGES/: messages.po
invenio_records_ui/translations/hr/LC_MESSAGES/: messages.po
invenio_records_ui/translations/hu/LC_MESSAGES/: messages.po
invenio_records_ui/translations/it/LC_MESSAGES/: messages.po
invenio_records_ui/translations/ja/LC_MESSAGES/: messages.po
invenio_records_ui/translations/ka/LC_MESSAGES/: messages.po
invenio_records_ui/translations/ko/LC_MESSAGES/: messages.po
invenio_records_ui/translations/lt/LC_MESSAGES/: messages.po
invenio_records_ui/translations/no/LC_MESSAGES/: messages.po
invenio_records_ui/translations/pl/LC_MESSAGES/: messages.po
invenio_records_ui/translations/pt/LC_MESSAGES/: messages.po
invenio_records_ui/translations/ro/LC_MESSAGES/: messages.po
invenio_records_ui/translations/ru/LC_MESSAGES/: messages.po
invenio_records_ui/translations/sk/LC_MESSAGES/: messages.po
invenio_records_ui/translations/sv/LC_MESSAGES/: messages.po
invenio_records_ui/translations/tr/LC_MESSAGES/: messages.po
invenio_records_ui/translations/uk/LC_MESSAGES/: messages.po
invenio_records_ui/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_records_ui/translations/zh_CN/LC_MESSAGES/: messages.po
invenio_records_ui/translations/zh_TW/LC_MESSAGES/: messages.po
tests/: conftest.py  helpers.py  test_examples_app.py  test_invenio_records_ui.py  test_invenio_views.py  test_record_files.py  test_utils.py
