# SPDX-FileCopyrightText: 2015-2018 CERN.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-records-ui"
description = "User interface for Invenio-Records."
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "invenio",
  "records",
  "ui",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "invenio-base>=2.0.0,<3.0.0",
  "invenio-i18n>=3.0.0,<4.0.0",
  "invenio-pidstore>=3.0.0,<4.0.0",
  "invenio-records>=5.0.0,<6.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-records-ui"

[project.entry-points."invenio_base.apps"]
invenio_records_ui = "invenio_records_ui:InvenioRecordsUI"

[project.entry-points."invenio_base.blueprints"]
invenio_records_ui = "invenio_records_ui.views:create_blueprint_from_app"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_records_ui"

[project.optional-dependencies]
docs = []
tests = [
  "invenio-access>=6.0.0,<7.0.0",
  "invenio-accounts>=8.0.0,<9.0.0",
  "invenio-db[versioning,mysql,postgresql]>=2.0.0,<3.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_records_ui/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_records_ui/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_records_ui/translations/messages.pot"
output_dir = "invenio_records_ui/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_records_ui/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_records_ui",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_records_ui --cov-report=term-missing'
filterwarnings = ["ignore::pytest.PytestDeprecationWarning"]
testpaths = "tests invenio_records_ui"
live_server_scope = "module"
