# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-records-ui
version = attr: invenio_records_ui.__version__
description = "User interface for Invenio-Records."
long_description = file: README.rst, CHANGES.rst
keywords = invenio records ui
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-records-ui
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    invenio-base>=1.2.2
    invenio-i18n>=1.2.0
    invenio-pidstore>=1.2.0
    invenio-records>=1.0.0

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-access>=1.0.0
    invenio-accounts>=1.3.0
    invenio-db[versioning,mysql,postgresql]>=1.0.0
    pytest-invenio>=1.4.0
    Sphinx>=1.5.1
# Kept for backwards compatibility
docs =

[options.entry_points]
invenio_base.apps =
    invenio_records_ui = invenio_records_ui:InvenioRecordsUI
invenio_base.blueprints =
    invenio_records_ui = invenio_records_ui.views:create_blueprint_from_app
invenio_i18n.translations =
    messages = invenio_records_ui

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_records_ui/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_records_ui/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_records_ui/translations/messages.pot
output-dir = invenio_records_ui/translations/

[update_catalog]
input-file = invenio_records_ui/translations/messages.pot
output-dir = invenio_records_ui/translations/

[isort]
profile=black

[tool:pytest]
pep8ignore = docs/conf.py ALL
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_records_ui --cov-report=term-missing tests invenio_records_ui
testpaths = docs tests invenio_records_ui
filterwarnings = ignore::pytest.PytestDeprecationWarning
